--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,3 +6,20 @@ body,
   height: 100%;
   min-width: 1366px;
 }
+
+.el-pagination {
+  margin-top: 15px;
+}
+/* .el-cascader-menu {
+  height: 300px;
+} */
+.el-cascader-menu__wrap,
+.el-scrollbar__wrap {
+  height: 290px !important;
+}
+
+.el-checkbox {
+  box-sizing: border-box;
+  width: 10%;
+  margin: 0 35px 0 0 !important;
+}
